fix spacing

--- a/public/css/particles.css
+++ b/public/css/particles.css
@@ -17,7 +17,7 @@ canvas {
 }
 
 .space {
-  padding: 5px;
+  padding: 14px;
 }
 
 input[type=text] {
